--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <img src="img/WWWerkplaats-TTTypografie.jpg" alt="WWWerkplaats TTTypografie">
+    <audio controls>
+  <source src="Elevator Music.mp3" type="audio/mp3">
+    </audio>
+
 </body>
 </html>
