--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <img src="img/WWWerkplaats-TTTypografie.jpg" alt="WWWerkplaats TTTypografie">
     <audio controls>
-  <source src="Elevator Music.mp3" type="audio/mp3">
+  <source src="img/Elevator Music.mp3" type="audio/mp3">
     </audio>
 
 </body>
