--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="img/WWWerkplaats-TTTypografie.jpg" alt="WWWerkplaats TTTypografie">
-    <audio controls>
+    <audio autoplay>
   <source src="img/Elevator Music.mp3" type="audio/mp3">
     </audio>
 
