--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
   <source src="img/Elevator Music.mp3" type="audio/mp3">
     </audio>
 
+     <script>
+    // Selecteer het audio-element
+    var audio = document.getElementById('audio');
+
+    // Voeg een click-evenement toe aan de hele pagina
+    document.addEventListener('click', function() {
+      // Speel de muziek af wanneer er op de pagina wordt geklikt
+      audio.play();
+    });
+  </script>
+
 </body>
 </html>
